xidlc/tests/snapshots/codegen_snapshot__axum__http_security_stream.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_security_stream.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpSecurityStreamService {
    async fn watch_channel(
        &self,
        req: ::xidl_rust_axum::Request<HttpSecurityStreamServiceWatchChannelRequest>,
    ) -> ::xidl_rust_axum::Result<xidl_rust_axum::stream::SseStream<String>>;
    async fn watch_public(
        &self,
        req: ::xidl_rust_axum::Request<()>,
    ) -> ::xidl_rust_axum::Result<xidl_rust_axum::stream::SseStream<String>>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpSecurityStreamService {
    use super::*;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpSecurityStreamService {
    use super::*;
}
#[derive(::serde::Deserialize)]
pub struct HttpSecurityStreamServiceWatchChannelPath {
    pub channel: String,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpSecurityStreamServiceWatchChannelRequest {
    pub channel: String,
    pub xidl_auth: xidl_rust_axum::auth::bearer::BearerAuth,
}
pub struct HttpSecurityStreamServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpSecurityStreamServiceServer<T>
where
    T: HttpSecurityStreamService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/channels/{channel}/events",
                xidl_rust_axum::axum::routing::get(Self::watch_channel),
            )
            .route(
                "/channels/public/events",
                xidl_rust_axum::axum::routing::get(Self::watch_public),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn watch_channel(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        auth_header: Option<
            ::xidl_rust_axum::axum_extra::extract::TypedHeader<
                ::xidl_rust_axum::auth::bearer::BearerHeader,
            >,
        >,
        ::xidl_rust_axum::axum::extract::Path(
            path,
        ): ::xidl_rust_axum::axum::extract::Path<
            HttpSecurityStreamServiceWatchChannelPath,
        >,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/event-stream") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let xidl_auth = match auth_header {
            Some(::xidl_rust_axum::axum_extra::extract::TypedHeader(auth_header)) => {
                xidl_rust_axum::auth::bearer::BearerAuth::from_header(auth_header)
            }
            None => return Err(xidl_rust_axum::Error::unauthorized()),
        };
        let HttpSecurityStreamServiceWatchChannelPath { channel } = path;
        let channel: String = channel;
        let data = HttpSecurityStreamServiceWatchChannelRequest {
            channel,
            xidl_auth,
        };
        let mut resp = match svc
            .watch_channel(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = xidl_rust_axum::stream::sse_response(resp_value);
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn watch_public(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/event-stream") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let data = ();
        let mut resp = match svc
            .watch_public(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = xidl_rust_axum::stream::sse_response(resp_value);
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpSecurityStreamServiceServer<T>
where
    T: HttpSecurityStreamService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpSecurityStreamServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpSecurityStreamServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_auth(
        base_url: impl Into<String>,
        auth: xidl_rust_axum::auth::bearer::BearerAuth,
    ) -> Self {
        let client_auth = ::xidl_rust_axum::ClientAuth {
            basic: None,
            bearer: Some(auth.token),
            api_keys: ::std::vec![],
        };
        Self {
            client: ::xidl_rust_axum::Client::with_auth(base_url, client_auth),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
    pub fn with_http_and_auth(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
        auth: xidl_rust_axum::auth::bearer::BearerAuth,
    ) -> Self {
        let client_auth = ::xidl_rust_axum::ClientAuth {
            basic: None,
            bearer: Some(auth.token),
            api_keys: ::std::vec![],
        };
        Self {
            client: ::xidl_rust_axum::Client::with_http_and_auth(
                base_url,
                http,
                client_auth,
            ),
        }
    }
    pub fn with_auth_override(
        &self,
        auth: Option<xidl_rust_axum::auth::bearer::BearerAuth>,
    ) -> Self {
        let client_auth = auth
            .map(|a| ::xidl_rust_axum::ClientAuth {
                basic: None,
                bearer: Some(a.token),
                api_keys: ::std::vec![],
            });
        Self {
            client: self.client.with_auth_override(client_auth),
        }
    }
}
#[allow(non_snake_case)]
impl HttpSecurityStreamServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn watch_channel(
        &self,
        channel: String,
    ) -> Result<xidl_rust_axum::stream::Reader<String>, xidl_rust_axum::Error> {
        let xidl_path = "/channels/{channel}/events".to_string();
        let xidl_path = xidl_path.replace("{channel}", &channel.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "text/event-stream",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        auth_target.apply_auth(&mut req, xidl_rust_axum::ClientAuthRequirement::Bearer)?;
        xidl_rust_axum::stream::open_sse::<String>(self.client.http(), req).await
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn watch_public(
        &self,
    ) -> Result<xidl_rust_axum::stream::Reader<String>, xidl_rust_axum::Error> {
        let xidl_path = "/channels/public/events".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "text/event-stream",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        xidl_rust_axum::stream::open_sse::<String>(self.client.http(), req).await
    }
}
