xidlc/tests/snapshots/codegen_snapshot__axum__http_stream_sse.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_sse.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpStreamSseService {
    async fn watch_topic(
        &self,
        req: ::xidl_rust_axum::Request<HttpStreamSseServiceWatchTopicRequest>,
    ) -> ::xidl_rust_axum::Result<xidl_rust_axum::stream::SseStream<String>>;
    async fn get_attribute_online(&self) -> ::xidl_rust_axum::Result<bool>;
    async fn set_attribute_online(&self, online: bool) -> ::xidl_rust_axum::Result<()>;
    async fn watch_attribute_online(
        &self,
        req: ::xidl_rust_axum::Request<()>,
    ) -> ::xidl_rust_axum::Result<xidl_rust_axum::stream::SseStream<bool>>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpStreamSseService {
    use super::*;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpStreamSseService {
    use super::*;
}
#[derive(::serde::Deserialize)]
pub struct HttpStreamSseServiceWatchTopicPath {
    pub topic: String,
}
#[derive(::serde::Serialize, ::core::default::Default)]
struct HttpStreamSseServiceWatchTopicRequestOutQuery {
    #[serde(default)]
    lang: String,
}
#[derive(::serde::Deserialize, ::core::default::Default)]
struct HttpStreamSseServiceWatchTopicRequestInQuery {
    #[serde(default)]
    lang: String,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpStreamSseServiceWatchTopicRequest {
    pub topic: String,
    pub lang: String,
}
pub type HttpStreamSseServiceSetAttributeOnlineRequestOutBody = bool;
pub type HttpStreamSseServiceSetAttributeOnlineRequestInBody = bool;
#[derive(::serde::Deserialize)]
struct HttpStreamSseServiceSetAttributeOnlineRequest {
    online: bool,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for HttpStreamSseServiceSetAttributeOnlineRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            if !::xidl_rust_axum::http::content_type_matches(
                xidl_headers,
                "text/plain",
            ) {
                return Err(::xidl_rust_axum::Error::unsupported_media_type());
            }
            let xidl_body_bytes = <::xidl_rust_axum::axum::body::Bytes as ::xidl_rust_axum::axum::extract::FromRequest<
                S,
            >>::from_request(
                    ::xidl_rust_axum::axum::extract::Request::from_parts(parts, body),
                    state,
                )
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(
                    err.status().as_u16(),
                    err.body_text(),
                ))?;
            let xidl_body: HttpStreamSseServiceSetAttributeOnlineRequestInBody = ::xidl_rust_axum::DeserializeFactory::new(
                    "text/plain",
                )
                .from_slice(&xidl_body_bytes)?;
            let online = xidl_body;
            Ok(Self { online })
        }
    }
}
pub struct HttpStreamSseServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpStreamSseServiceServer<T>
where
    T: HttpStreamSseService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/events/{topic}",
                xidl_rust_axum::axum::routing::get(Self::watch_topic),
            )
            .route(
                "/attribute/online",
                xidl_rust_axum::axum::routing::get(Self::get_attribute_online),
            )
            .route(
                "/attribute/online",
                xidl_rust_axum::axum::routing::post(Self::set_attribute_online),
            )
            .route(
                "/HttpStreamSseService/watch_attribute_online",
                xidl_rust_axum::axum::routing::get(Self::watch_attribute_online),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn watch_topic(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        ::xidl_rust_axum::axum::extract::Path(
            path,
        ): ::xidl_rust_axum::axum::extract::Path<HttpStreamSseServiceWatchTopicPath>,
        xidl_rust_axum::axum::extract::Query(
            query,
        ): xidl_rust_axum::axum::extract::Query<
            HttpStreamSseServiceWatchTopicRequestInQuery,
        >,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/event-stream") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpStreamSseServiceWatchTopicPath { topic } = path;
        let topic: String = topic;
        let HttpStreamSseServiceWatchTopicRequestInQuery { lang } = query;
        let lang: String = lang;
        let data = HttpStreamSseServiceWatchTopicRequest {
            topic,
            lang,
        };
        let mut resp = match svc
            .watch_topic(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = xidl_rust_axum::stream::sse_response(resp_value);
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn get_attribute_online(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let mut resp = match svc.get_attribute_online().await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: bool = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn set_attribute_online(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: HttpStreamSseServiceSetAttributeOnlineRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "application/json") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpStreamSseServiceSetAttributeOnlineRequest { online } = request;
        let online: bool = online;
        let mut resp = match svc.set_attribute_online(online).await {
            Ok(resp_value) => {
                let mut resp = {
                    let _ = resp_value;
                    ::xidl_rust_axum::axum::response::IntoResponse::into_response(
                        ::xidl_rust_axum::axum::http::StatusCode::NO_CONTENT,
                    )
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn watch_attribute_online(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/event-stream") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let data = ();
        let mut resp = match svc
            .watch_attribute_online(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = xidl_rust_axum::stream::sse_response(resp_value);
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpStreamSseServiceServer<T>
where
    T: HttpStreamSseService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpStreamSseServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpStreamSseServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpStreamSseServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn watch_topic(
        &self,
        topic: String,
        lang: String,
    ) -> Result<xidl_rust_axum::stream::Reader<String>, xidl_rust_axum::Error> {
        let xidl_path = "/events/{topic}".to_string();
        let xidl_path = xidl_path.replace("{topic}", &topic.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "text/event-stream",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let query = HttpStreamSseServiceWatchTopicRequestOutQuery {
            lang,
        };
        let query = xidl_rust_axum::serde_urlencoded::to_string(&query)
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if !query.is_empty() {
            req.url_mut().set_query(Some(&query));
        }
        let auth_target = &self.client;
        let _ = auth_target;
        xidl_rust_axum::stream::open_sse::<String>(self.client.http(), req).await
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn get_attribute_online(&self) -> Result<bool, xidl_rust_axum::Error> {
        let xidl_path = "/attribute/online".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: bool = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn set_attribute_online(
        &self,
        online: bool,
    ) -> Result<(), xidl_rust_axum::Error> {
        let xidl_path = "/attribute/online".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::POST, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/json",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let body: bool = online;
        let body = xidl_rust_axum::SerializeFactory::new("text/plain").to_vec(&body)?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::CONTENT_TYPE,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        *req.body_mut() = Some(xidl_rust_axum::reqwest::Body::from(body));
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            Ok(())
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn watch_attribute_online(
        &self,
    ) -> Result<xidl_rust_axum::stream::Reader<bool>, xidl_rust_axum::Error> {
        let xidl_path = "/HttpStreamSseService/watch_attribute_online".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "text/event-stream",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        xidl_rust_axum::stream::open_sse::<bool>(self.client.http(), req).await
    }
}
