xidlc/tests/snapshots/codegen_snapshot__axum__http_stream_sse_bindings.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_stream_sse_bindings.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct ProjectEvent {
    pub id: String,
    pub payload: String,
}
impl ProjectEvent {}
#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpStreamSseBindingsService {
    async fn watch_project(
        &self,
        req: ::xidl_rust_axum::Request<HttpStreamSseBindingsServiceWatchProjectRequest>,
    ) -> ::xidl_rust_axum::Result<xidl_rust_axum::stream::SseStream<ProjectEvent>>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpStreamSseBindingsService {
    use super::*;
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct ProjectEvent {
        pub id: String,
        pub payload: String,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::ProjectEvent> for ProjectEvent {
        fn from(value: super::ProjectEvent) -> Self {
            Self {
                id: value.id,
                payload: value.payload,
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<ProjectEvent> for super::ProjectEvent {
        fn from(value: ProjectEvent) -> Self {
            Self {
                id: value.id,
                payload: value.payload,
            }
        }
    }
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpStreamSseBindingsService {
    use super::*;
    #[derive(::serde::Serialize, ::serde::Deserialize)]
    pub struct ProjectEvent {
        pub id: String,
        pub payload: String,
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<super::ProjectEvent> for ProjectEvent {
        fn from(value: super::ProjectEvent) -> Self {
            Self {
                id: value.id,
                payload: value.payload,
            }
        }
    }
    #[allow(unused_variables, unreachable_code)]
    impl From<ProjectEvent> for super::ProjectEvent {
        fn from(value: ProjectEvent) -> Self {
            Self {
                id: value.id,
                payload: value.payload,
            }
        }
    }
}
#[derive(::serde::Deserialize)]
pub struct HttpStreamSseBindingsServiceWatchProjectPath {
    pub project_id: String,
}
#[derive(::serde::Serialize, ::core::default::Default)]
struct HttpStreamSseBindingsServiceWatchProjectRequestOutQuery {
    #[serde(default)]
    cursor: Option<String>,
}
#[derive(::serde::Deserialize, ::core::default::Default)]
struct HttpStreamSseBindingsServiceWatchProjectRequestInQuery {
    #[serde(default)]
    cursor: Option<String>,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpStreamSseBindingsServiceWatchProjectRequest {
    pub project_id: String,
    pub cursor: Option<String>,
    pub trace_id: String,
}
pub struct HttpStreamSseBindingsServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpStreamSseBindingsServiceServer<T>
where
    T: HttpStreamSseBindingsService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route(
                "/projects/{project_id}/events",
                xidl_rust_axum::axum::routing::get(Self::watch_project),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn watch_project(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        ::xidl_rust_axum::axum::extract::Path(
            path,
        ): ::xidl_rust_axum::axum::extract::Path<
            HttpStreamSseBindingsServiceWatchProjectPath,
        >,
        xidl_rust_axum::axum::extract::Query(
            query,
        ): xidl_rust_axum::axum::extract::Query<
            HttpStreamSseBindingsServiceWatchProjectRequestInQuery,
        >,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/event-stream") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpStreamSseBindingsServiceWatchProjectPath { project_id } = path;
        let project_id: String = project_id;
        let HttpStreamSseBindingsServiceWatchProjectRequestInQuery { cursor } = query;
        let cursor: Option<String> = cursor;
        let trace_id: String = match headers.get("X-Trace-Id") {
            Some(header_value) => {
                let header_str = header_value
                    .to_str()
                    .map_err(|err| ::xidl_rust_axum::Error::new(
                        400,
                        format!("{err:?}"),
                    ))?;
                header_str.to_string()
            }
            None => ::core::default::Default::default(),
        };
        let data = HttpStreamSseBindingsServiceWatchProjectRequest {
            project_id,
            cursor,
            trace_id,
        };
        let mut resp = match svc
            .watch_project(::xidl_rust_axum::Request::new(headers, data))
            .await
        {
            Ok(resp_value) => {
                let mut resp = xidl_rust_axum::stream::sse_response(resp_value);
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpStreamSseBindingsServiceServer<T>
where
    T: HttpStreamSseBindingsService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpStreamSseBindingsServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpStreamSseBindingsServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpStreamSseBindingsServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn watch_project(
        &self,
        project_id: String,
        cursor: Option<String>,
        trace_id: String,
    ) -> Result<xidl_rust_axum::stream::Reader<ProjectEvent>, xidl_rust_axum::Error> {
        let xidl_path = "/projects/{project_id}/events".to_string();
        let xidl_path = xidl_path.replace("{project_id}", &project_id.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "text/event-stream",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let header_name = xidl_rust_axum::reqwest::header::HeaderName::from_bytes(
                "X-Trace-Id".as_bytes(),
            )
            .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?;
        let header_value_str = trace_id;
        let header_value = xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                &header_value_str,
            )
            .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?;
        req.headers_mut().insert(header_name, header_value);
        let query = HttpStreamSseBindingsServiceWatchProjectRequestOutQuery {
            cursor,
        };
        let query = xidl_rust_axum::serde_urlencoded::to_string(&query)
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if !query.is_empty() {
            req.url_mut().set_query(Some(&query));
        }
        let auth_target = &self.client;
        let _ = auth_target;
        xidl_rust_axum::stream::open_sse::<ProjectEvent>(self.client.http(), req).await
    }
}
